testutils/test/generated_ingresses/tcp_port_albid_tea2.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tcpport-albid-ingress-tea2-svc-tea2
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "private-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: tea2-svc
              servicePort: 80
            path: /tea2
